2007-03-14  Stefan Kost  <ensonic@users.sf.net>

	* gparam.h:
	  Add G_PARAM_STATIC_STRINGS define (fixes #418021).

Mon Mar 12 13:30:20 2007  Tim Janik  <timj@gtk.org>

	* gtype.h: marked purely functional g_type accessors as PURE or CONST,
	closes #305100.

2007-01-02  Tor Lillqvist  <tml@novell.com>

	* glib-genmarshal.c (main): Handle "/dev/stdin" by dup()ing fd 0
	so that it works on Win32 and other systems without
	/dev/stdin. (#407431)

2006-12-29 Matthias Clasen  <mclasen@redhat.com>

	* gtypemodule.h: Define G_DEFINE_DYNAMIC_TYPE and
	and _EXTENDED variant.  (#334437)

Fri Dec 15 2006  Matthias Clasen  <mclasen@redhat.com>

	* gtype.c (instance_real_class_get): Dereference the pointer 
	before dropping the lock.  (#378078, Jonathan Matthew)

Tue Oct 10 12:06:08 2006  Tim Janik  <timj@gtk.org>

	* glib-mkenums.in: 
	* glib-mkenums.1: applied patch from David Necas which introduces
	an underscore_name option and fixes #358734.

Mon Oct  2 15:50:16 2006  Tim Janik  <timj@gtk.org>

	* gvalue.c (g_value_peek_pointer): reverted a change to have an
	assert instead of a g_return_val_if_fail() here. libraries (and
	programs) should only ever g_assert or g_error if there is no way
	to carry on with the current program state. that's clearly not 
	the case here.

	* ChangeLog: added missing changelog entry for 2003-12-30.

Sat Sep 30 2006  Matthias Clasen  <mclasen@redhat.com>

	* pltcheck.sh: Script to check PLT entries.

	* Makefile.am (TESTS): Run pltcheck.sh

	* gtype.c:
	* gsignal.c:
	* gobject.c:
	* gvaluetypes.c: Move all includes before gobjectalias.h.
	(#3545422, Behdad Esfahbod)

Fri Sep 22 13:41:02 2006  Tim Janik  <timj@imendio.com>

	* gtype.h: applied patch from Behdad with slight optimization, 
	fixes #356175.

	* gobjectnotifyqueue.c: fixed include-guard macro name.

Mon Sep 11 12:12:45 2006  Tim Janik  <timj@imendio.com>

	* gparam.c (g_param_spec_sink): reimplemented floating flag handling by
	atomically accessing a reserved GData bit, fixes #330556.